fix histories__card_footer_read_me text align

--- a/styles/histories.css
+++ b/styles/histories.css
@@ -94,6 +94,8 @@
 
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-items: center;
     gap: 15px;
 }
 
